TinyMUX 2.7:  CHANGES
Last Update:  June 2008

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Added mux_string and fixed many functions including EDIT(),
    EXTRACT(), REVERSE(), SQUISH(), WORDPOS(), and DELETE() (Issues
    14, 25, 52, 98, 100, and 232). Thanks Jake and Alierak.
 -- Added Unicode support with the database using UTF-8 and
    supporting ASCII, ISO 8859-1, and UTF-8 clients.  Earlier mail,
    comsys, and flatfiles versions are converted.
 -- NOACCENTS flag renamed to ASCII and used to force an ASCII
    encoding for clients which do not properly negotiate or
    alternatively, out of preference.
 -- UNICODE flag added to force a UTF-8 encoding for clients which
    support UTF-8 but do not negotiate it.
 -- Added CHARSET and NEW-ENVIRON telnet negotiations which may affect
    clients.
 -- Add SSL encryption support including ssl_certificate_file,
    port_ssl, ssl_certificate_key, and ssl_certificate_password
    configuration options.  This is enabled with --enable-ssl.
 -- Add Telnet option STARTTLS to support secure connections.
    This is enabled with --enable-ssl.
 -- Added infrastructure for dynamically-loadable modules that can be
    provided by netmux, loaded by netmux, provided by a separate
    slavestub, or loaded by slavestub.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Support optional action list with @break.  Add corresponding
    @assert command. (Issue 36).
 -- Help files support PennMUSH-style multiple topics for each help
    entry; consecutive &FOO lines refer to the same content
    (Issue 238).  Thanks Alierak.
 -- Added LPAD(), CPAD(), and RPAD() functions to duplicate previous
    non-truncating LJUST(), CENTER(), and RJUST() functionality
    (Issue 13).  Thanks Jake.
 -- Added /delete switch to @function and allow removal of
    user-defined functions (Issue 250).  Thanks Jake.